# SegmentTS

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
data/: .gitignore  6datasets.sh  M5.sh  PhysioNet.sh  Tcho_extrach.sh
data/AE/: preprocessing.py
data/EU-Flu/: EUTesting.csv
data/traffic_data/: .gitignore  STUCT.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: setup.sh
src/embedts/models/: simple_layers.py  spin_model.py
src/embedts/models/layers/: AutoCorrelation.py  Embed.py  PatchTST_backbone.py  PatchTST_layers.py  README.md  SelfAttention_Family.py
src/embedts/models/transformers/: layers.py
src/lptm/: __init__.py  selection.pyi
src/lptm/segment/: scoring.py  selection.py
test/test_lptm/: test_selection.py
test/test_lptm/test_segment/: test_scoring.py
