[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lptm"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "aim>=3.24.0",
    "einops>=0.8.0",
    "matplotlib>=3.9.2",
    "numpy>1.24.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]
[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
module-name = "lptm.selection"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]
