[metadata]
name = embedts
version = 0.1.0

[options]
package_dir =
    =src
packages = find:
install_requires =
    torch >=1.13, <1.14
    numpy >=1.23, <2.0
    scipy >=1.9, <2.0
    tqdm
    aim >=3.15, <3.16
    einops
    PyYAML >=6.0, <7.0
    typed-argument-parser >=1.7.2, <1.8.0

[options.extras_require]
dev =
    jupyter
    ipykernel
    jq
    black[jupyter]
    pylint
    isort
    pytest
    flake8
    mypy
    types-PyYAML
    pdbpp

[options.packages.find]
where = src
